src/objects/Service_Request__c.object
<CustomObject>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVERTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ON-LINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Serial_No__c</fullName>
        <label>Product Serial No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Product_Category__c</field>
                <operation>notEqual</operation>
                <value>COMPONENT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Service Request</relationshipLabel>
        <relationshipName>Service_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_City__c</fullName>
        <label>Purchase City</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Country__c</fullName>
        <label>Purchase Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Deps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Date_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Date Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Invoice_No__c</fullName>
        <label>Purchase Invoice No.</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_State__c</fullName>
        <label>Purchase State</label>
        <picklist>
            <picklistValues>
                <fullName>Tamilnadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman and Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu &amp; Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondicherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>SYSTEM NOT WORKING ON MAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM NOT WORKING ON BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAINS MCB TRIPPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC MCB TRIPPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUSE BLOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUSE BROKEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH FAULTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM ON BUT NO OUTPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM DEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS LOW BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS OVER LOAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS SHORT CIRCUIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARGING CONTINUSELY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT CHARGING BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY OVERHEATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY DRY RUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONNECTOR BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSIT DAMAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSFORMER BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARD BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGEOVER PROBLEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAN NOT WORKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOOSE CONNECTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOCKET DAMAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAIN LEAD FAULTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED DISPLAY NOT WORKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS OVER TEMPERATURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY LOW BACKUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM GENERATES HUMMING SOUND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receiving_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Receiving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommended_Visit_Date_Time__c</fullName>
        <label>Recommended Visit Date / Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>$User.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFFLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFFLAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_Created_Date__c</fullName>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_No_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serial No. Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Bill_No__c</fullName>
        <label>Service Bill No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Centre_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used by Call Center User to select the Service Center City</description>
        <label>Service Centre City</label>
        <referenceTo>Service_Centre_City__c</referenceTo>
        <relationshipLabel>Service Request</relationshipLabel>
        <relationshipName>Service_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Centre_Contact_No__c</fullName>
        <formula>VALUE (  Service_Engineer_Assigned__r.Related_to_Service_Center__r.Telephone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Centre Contact No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Type__c</fullName>
        <label>Service Charge Type</label>
        <picklist>
            <controllingField>AMC_Status__c</controllingField>
            <picklistValues>
                <fullName>Carry In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Charges_After_Tax__c</fullName>
        <formula>( (Service_Charges__c - Service_Charges__c * Discount_in_Service_Charges__c ) + Service_Charges_Other__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Charges(After Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Charges_Other__c</fullName>
        <label>Misc. Service Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Charges__c</fullName>
        <label>Service Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Engineer Assigned</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Stock_Point__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Stock_Point__c.OwnerId</field>
                <operation>equals</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Stock_Point__c</referenceTo>
        <relationshipLabel>Service Request</relationshipLabel>
        <relationshipName>Service_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Code__c</fullName>
        <formula>Service_Engineer_Assigned__r.Employee_Code__c</formula>
        <label>Service Engineer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Id__c</fullName>
        <formula>Service_Engineer_Assigned__r.Service_Engineer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Location_Code__c</fullName>
        <formula>Service_Engineer_Assigned__r.Service_Center_Location_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineer Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Mobile_No__c</fullName>
        <formula>Service_Engineer_Assigned__r.Service_Engineer_Mobile_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineer Mobile No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Name__c</fullName>
        <label>Service Engineer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Attended_Date__c</fullName>
        <label>Service Request Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Amount__c</fullName>
        <formula>(Service_Charges__c + Service_Charges_Other__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Rate__c</fullName>
        <formula>IF( AND((CreatedDate &lt; DATETIMEVALUE(&quot;2012-04-01 00:00:01&quot;)), (ClosedDate__c &lt; DATETIMEVALUE(&quot;2012-04-01 00:00:01&quot;)) ) , 10.36/100,12.36/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <controllingField>CALL_TYPE__c</controllingField>
            <picklistValues>
                <fullName>LOCAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPCOUNTRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARRY IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To_Cust__c</fullName>
        <formula>Account__r.ShippingStreet + &apos;  &apos; + Account__r.ShippingCity + &apos;  &apos; + Account__r.ShippingState + &apos;  &apos; + Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Cust</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATTENDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REJECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLOCATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReOpen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Point_Owner_Id__c</fullName>
        <formula>Service_Engineer_Assigned__r.OwnerId</formula>
        <label>Stock Point Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Point_Type__c</fullName>
        <formula>Service_Engineer_Assigned__r.RecordTypeId</formula>
        <label>Stock Point Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Group__c</fullName>
        <label>Sub Group</label>
        <picklist>
            <picklistValues>
                <fullName>150Ah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100Ah</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status_Remark__c</fullName>
        <label>Sub Status Remark</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedCompany__c</fullName>
        <label>Web Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedEmail__c</fullName>
        <label>Web Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SuppliedName__c</fullName>
        <label>Web Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedPhone__c</fullName>
        <label>Web Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Component_Amount_After_Tax__c</fullName>
        <formula>(Net_Basic_CC_Amount__c * Component_Tax_Rate_1__c ) + Net_Basic_CC_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Component Amount (After Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Defective_Quantity_Returned__c</fullName>
        <label>Total Defective Quantity Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity_Issued__c</fullName>
        <label>Total Quantity Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Amount__c</fullName>
        <formula>Component_Tax_Amount__c  + Service_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Replacement__c</fullName>
        <label>Type of Replacement</label>
        <picklist>
            <controllingField>Type_of_Service_Request__c</controllingField>
            <picklistValues>
                <fullName>Component Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_Request__c</fullName>
        <label>Type of Service Request</label>
        <picklist>
            <controllingField>Warranty_Status__c</controllingField>
            <picklistValues>
                <fullName>Sale of Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Card_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty Card Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Card__c</fullName>
        <label>Warranty Card</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Status__c</fullName>
        <label>Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>case_person_city__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case person city</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_person_country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case person country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_person_state__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case person state</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_person_street__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case person street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_person_zip__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case person zip</label>
        <type>Text</type>
    </fields>
    <label>Service Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAst_modified__c</columns>
        <columns>NAME</columns>
        <columns>FSR_No__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Engineer_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>NAME</columns>
        <columns>FSR_No__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Engineer_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Cases</fullName>
        <columns>FSR_No__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Engineer_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>Assigned Cases</label>
    </listViews>
    <listViews>
        <fullName>Email_to_Case</fullName>
        <columns>NAME</columns>
        <columns>FSR_No__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Engineer_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Origin__c</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>Email to Case</label>
    </listViews>
    <listViews>
        <fullName>My_Cases</fullName>
        <columns>FSR_No__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Engineer_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Origin__c</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>My_New_Cases</fullName>
        <columns>FSR_No__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Engineer_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>My New Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Cases</fullName>
        <columns>FSR_No__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Engineer_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Service Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request</pluralLabel>
    <recordTypes>
        <fullName>New_Service_Request</fullName>
        <active>true</active>
        <label>New Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Case_Call_Center</fullName>
        <active>true</active>
        <label>Open Case Call Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Request_Closed</fullName>
        <active>true</active>
        <label>Service Request Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_center_layout</fullName>
        <active>true</active>
        <label>Service center layout</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Attended_Date_Time_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Attended_Date_Time__c &gt; Completion_Date_Time__c</errorConditionFormula>
        <errorDisplayField>Attended_Date_Time__c</errorDisplayField>
        <errorMessage>Attended Date &amp; Time can not be greater than Completion Date &amp; Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Can_not_change_owner_if_assigned</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  OR(
 $Profile.Name  &lt;&gt; &quot;System Administrator&quot;,$Profile.Name  &lt;&gt;  &quot;sukam System Administrator&quot;) , 
NOT(ISPICKVAL(Status__c , &quot;New&quot;) ) , 
ISCHANGED( OwnerId ) )</errorConditionFormula>
        <errorMessage>Can not change the owner if call has been assigned.</errorMessage>
    </validationRules>
</CustomObject>